variables.RunHalf.scala.error
Compilation error:
RunHalf:-12: error: Unmatched closing brace '}' ignored here
	}
        ^RunHalf:-11: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^RunHalf:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^